--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             </div>
             <div class="col-lg-3">
                <div class="mainHeaderTopRight text-right">
-                  <div class="row">
+                  <div class="row align-items-center">
                      <div class="col-lg-4">
                         <div class="awardIcon">
                            <li>
@@ -271,7 +271,7 @@
                         <div class="beforeLogin">
                            <a href="#">Sign In</a>
                         </div>
-                        <<!-- div class="afterLogin">
+                        <!-- div class="afterLogin">
                            <ul>
                               <li data-placement="bottom" id="toltip1" data-toggle="tooltip">
                                  <a href="#"><img src="asset/img/icons/bag.png" alt=""></a>
