--- a/class-attend.html
+++ b/class-attend.html
@@ -29,7 +29,7 @@
 
 <body>
    
-      <!-- this 3 part about website main header -->
+   <!-- this 3 part about website main header -->
    <header id="mainHeaderTop" class="hide_mobile hide_tab hide_sm psr">
       <div class="container pst">
          <div class="row align-items-center pst">
@@ -257,7 +257,7 @@
             </div>
             <div class="col-lg-3">
                <div class="mainHeaderTopRight text-right">
-                  <div class="row">
+                  <div class="row align-items-center">
                      <div class="col-lg-4">
                         <div class="awardIcon">
                            <li>
@@ -272,7 +272,7 @@
                         <div class="beforeLogin">
                            <a href="#">Sign In</a>
                         </div>
-                        <<!-- div class="afterLogin">
+                        <!-- div class="afterLogin">
                            <ul>
                               <li data-placement="bottom" id="toltip1" data-toggle="tooltip">
                                  <a href="#"><img src="asset/img/icons/bag.png" alt=""></a>
