Add mobile Sidebar Menu after Login user
This is the fix for this task Screen 6(New) Web logout is not there in the header

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       </div>
    </section>
 
-   <section id="sidebarMenu">
+   <section id="sidebarMenu" class="show">
       <div class="mobile_menu_info">
          <div class="container">
          <div class="row align-items-center">
@@ -326,8 +326,8 @@
                <div class="mobileMenuTopRight text-right">
                   <ul>
                      <li>
-                        <a href="#">Sign In</a>
-                        <!-- <a class="afaterLogin" href="#"><img src="asset/img/icons/user2.png" alt=""></a> -->
+                        <!-- <a href="#">Sign In</a> -->
+                        <a class="afaterLogin" href="#"><img src="asset/img/icons/user2.png" alt=""></a>
                      </li>
                      <li><span class="mobileToggle"><i class="fal fa-times"></i></span></li>
                   </ul>
@@ -335,6 +335,17 @@
             </div>
          </div>
       </div>
+      </div>
+      <div class="menu_after_signIn">
+         <ul>
+            <li><a href="#"><span><img src="asset/img/icons/sidebar/ticket.png" alt=""></span> My Dashboard</a></li>
+            <li><a href="#"><span><img src="asset/img/icons/sidebar/tv.png" alt=""></span> My Profile</a></li>
+            <li><a href="#"><span><img src="asset/img/icons/sidebar/review.png" alt=""></span> My Portfolio</a></li>
+            <li><a href="#"><span><img src="asset/img/icons/sidebar/blackboard.png" alt=""></span> My Classes</a></li>
+            <li><a href="#"><span><img src="asset/img/icons/sidebar/trophy.png" alt=""></span> Account Settings</a></li>
+            <li><a href="#"><span><img src="asset/img/icons/sidebar/walet.png" alt=""></span> My Wallet</a></li>
+            <li><a href="#"><span><img src="asset/img/icons/sidebar/ticket.png" alt=""></span> Sign Out</a></li>
+         </ul>
       </div>
       <div class="menu_top">
          <ul>
