Remove Show Class from sidebar
Remove Show Class from sidebar

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       </div>
    </section>
 
-   <section id="sidebarMenu" class="show">
+   <section id="sidebarMenu">
       <div class="mobile_menu_info">
          <div class="container">
          <div class="row align-items-center">
