Make Select Active Class for Slot selection,
2 Make Select Active Class for Slot selection, I am attaching the screenshot, it should be class, not hover effect

--- a/single-masterclass.html
+++ b/single-masterclass.html
@@ -501,12 +501,12 @@
                                     <h5>Choose Slot</h5>
                                     <ul>
                                        <li>
-                                          <a href="#">10.30 AM</a>
+                                          <a id="slotSelection" href="#">10.30 AM</a>
                                           <p>2 / 5 Seats left!</p>
                                        </li>
-                                       <li><a href="#">5 PM</a></li>
+                                       <li><a id="slotSelection2" href="#">5 PM</a></li>
                                        <li>
-                                          <a href="#">6.30 PM</a>
+                                          <a id="slotSelection2" href="#">6.30 PM</a>
                                           <p>1 / 5 Seats left!</p>
                                        </li>
                                     </ul>
