Image responsive all page
Make Image Size responsive according to screen size( Attaching Screenshot)

--- a/master-class.html
+++ b/master-class.html
@@ -503,7 +503,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -533,7 +533,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -563,7 +563,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -609,7 +609,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -639,7 +639,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -669,7 +669,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -715,7 +715,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -745,7 +745,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -775,7 +775,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -821,7 +821,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -851,7 +851,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -881,7 +881,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -927,7 +927,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -957,7 +957,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -987,7 +987,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -1033,7 +1033,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -1063,7 +1063,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -1093,7 +1093,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -1139,7 +1139,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -1169,7 +1169,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -1199,7 +1199,7 @@
                <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
                   <div class="masterClass_scroll_item_1_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
