--- a/single-badge.html
+++ b/single-badge.html
@@ -517,7 +517,7 @@
                <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="masterClass_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -547,7 +547,7 @@
                <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="masterClass_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -577,7 +577,7 @@
                <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="masterClass_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -607,7 +607,7 @@
                <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="masterClass_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -637,7 +637,7 @@
                <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="masterClass_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -667,7 +667,7 @@
                <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="masterClass_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -715,7 +715,7 @@
                <div class="col-lg-6 col-md-6">
                   <div class="mastaerClass_program_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/program.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/program.png" alt="">
                         <div class="info">
                            <h3>APPLIED ROBOTICS <br /> BOOTCAMP</h3>
                         </div>
@@ -730,7 +730,7 @@
                <div class="col-lg-6 col-md-6">
                   <div class="mastaerClass_program_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/program.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/program.png" alt="">
                         <div class="info">
                            <h3>PROGRAMMING & GAME <br /> DEVELOPMENT </h3>
                         </div>
