--- a/single-goal.html
+++ b/single-goal.html
@@ -500,7 +500,7 @@
                <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="masterClass_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -530,7 +530,7 @@
                <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="masterClass_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -560,7 +560,7 @@
                <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="masterClass_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -590,7 +590,7 @@
                <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="masterClass_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -620,7 +620,7 @@
                <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="masterClass_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
@@ -650,7 +650,7 @@
                <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="masterClass_main_item">
                      <div class="image">
-                        <img class="img-fluid" src="asset/img/masterclass/1.png" alt="">
+                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="">
                         <div class="info">
                            <h5>WORKSHOP CATEGORY</h5>
                            <h3>WORKSHOP NAME</h3>
