masterclass scroll spy
In the masterclass, calendar scroll is not working properly ( Urgent Priority) this is fix ui issue but no working on scoll actie class

--- a/master-class.html
+++ b/master-class.html
@@ -489,113 +489,116 @@
       </div>
    </section>
 
-   <section id="masterClass_scroll_item_1" class="masterClass_scroll_item_1_class">
-      <div class="container">
-         <div class="row">
-            <div class="col-lg-12">
-               <div class="masterClass_scroll_item_1_title text-center">
-                  <h3>Classes of today</h3>
-               </div>
-            </div>
-         </div>
-         <div class="masterClass_scroll_item_1_main">
-            <div class="row">
-               <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
-                  <div class="masterClass_scroll_item_1_main_item">
-                     <div class="image">
-                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="" />
-                        <div class="info">
-                           <h5>WORKSHOP CATEGORY</h5>
-                           <h3>WORKSHOP NAME</h3>
-                        </div>
-                        <div class="info_badge">
-                           <p>12+ Years</p>
-                        </div>
-                     </div>
-                     <div class="content">
-                        <div class="row">
-                           <div class="col-lg-4 col-md-4 col-sm-5 col-4">
-                              <div class="content_left">
-                                 <p>LIVE ON</p>
-                                 <h5>23 Jun '20</h5>
-                              </div>
-                           </div>
-                           <div class="col-lg-8 col-md-8 col-sm-7 col-8">
-                              <div class="content_right">
-                                 <p>TIME SLOTS</p>
-                                 <h5>10.30 AM, 11.30 AM <span>&amp; MORE</span> <a href="#"><img src="asset/img/icons/arrow-right.png" alt="" /></a></h5>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
-                  <div class="masterClass_scroll_item_1_main_item">
-                     <div class="image">
-                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="" />
-                        <div class="info">
-                           <h5>WORKSHOP CATEGORY</h5>
-                           <h3>WORKSHOP NAME</h3>
-                        </div>
-                        <div class="info_badge">
-                           <p>12+ Years</p>
-                        </div>
-                     </div>
-                     <div class="content">
-                        <div class="row">
-                           <div class="col-lg-4 col-md-4 col-sm-5 col-4">
-                              <div class="content_left">
-                                 <p>LIVE ON</p>
-                                 <h5>23 Jun '20</h5>
-                              </div>
-                           </div>
-                           <div class="col-lg-8 col-md-8 col-sm-7 col-8">
-                              <div class="content_right">
-                                 <p>TIME SLOTS</p>
-                                 <h5>10.30 AM, 11.30 AM <span>&amp; MORE</span> <a href="#"><img src="asset/img/icons/arrow-right.png" alt="" /></a></h5>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
-                  <div class="masterClass_scroll_item_1_main_item">
-                     <div class="image">
-                        <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="" />
-                        <div class="info">
-                           <h5>WORKSHOP CATEGORY</h5>
-                           <h3>WORKSHOP NAME</h3>
-                        </div>
-                        <div class="info_badge">
-                           <p>12+ Years</p>
-                        </div>
-                     </div>
-                     <div class="content">
-                        <div class="row">
-                           <div class="col-lg-4 col-md-4 col-sm-5 col-4">
-                              <div class="content_left">
-                                 <p>LIVE ON</p>
-                                 <h5>23 Jun '20</h5>
-                              </div>
-                           </div>
-                           <div class="col-lg-8 col-md-8 col-sm-7 col-8">
-                              <div class="content_right">
-                                 <p>TIME SLOTS</p>
-                                 <h5>10.30 AM, 11.30 AM <span>&amp; MORE</span> <a href="#"><img src="asset/img/icons/arrow-right.png" alt="" /></a></h5>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section>
 
-   <section id="masterClass_scroll_item_2" class="masterClass_scroll_item_1_class">
+   <section id="masterCLassMainContainerScrollSpy">
+
+   <div id="masterClass_scroll_item_1" class="masterClass_scroll_item_1_class">
+         <div class="container">
+            <div class="row">
+               <div class="col-lg-12">
+                  <div class="masterClass_scroll_item_1_title text-center">
+                     <h3>Classes of today</h3>
+                  </div>
+               </div>
+            </div>
+            <div class="masterClass_scroll_item_1_main">
+               <div class="row">
+                  <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
+                     <div class="masterClass_scroll_item_1_main_item">
+                        <div class="image">
+                           <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="" />
+                           <div class="info">
+                              <h5>WORKSHOP CATEGORY</h5>
+                              <h3>WORKSHOP NAME</h3>
+                           </div>
+                           <div class="info_badge">
+                              <p>12+ Years</p>
+                           </div>
+                        </div>
+                        <div class="content">
+                           <div class="row">
+                              <div class="col-lg-4 col-md-4 col-sm-5 col-4">
+                                 <div class="content_left">
+                                    <p>LIVE ON</p>
+                                    <h5>23 Jun '20</h5>
+                                 </div>
+                              </div>
+                              <div class="col-lg-8 col-md-8 col-sm-7 col-8">
+                                 <div class="content_right">
+                                    <p>TIME SLOTS</p>
+                                    <h5>10.30 AM, 11.30 AM <span>&amp; MORE</span> <a href="#"><img src="asset/img/icons/arrow-right.png" alt="" /></a></h5>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
+                     <div class="masterClass_scroll_item_1_main_item">
+                        <div class="image">
+                           <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="" />
+                           <div class="info">
+                              <h5>WORKSHOP CATEGORY</h5>
+                              <h3>WORKSHOP NAME</h3>
+                           </div>
+                           <div class="info_badge">
+                              <p>12+ Years</p>
+                           </div>
+                        </div>
+                        <div class="content">
+                           <div class="row">
+                              <div class="col-lg-4 col-md-4 col-sm-5 col-4">
+                                 <div class="content_left">
+                                    <p>LIVE ON</p>
+                                    <h5>23 Jun '20</h5>
+                                 </div>
+                              </div>
+                              <div class="col-lg-8 col-md-8 col-sm-7 col-8">
+                                 <div class="content_right">
+                                    <p>TIME SLOTS</p>
+                                    <h5>10.30 AM, 11.30 AM <span>&amp; MORE</span> <a href="#"><img src="asset/img/icons/arrow-right.png" alt="" /></a></h5>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-10 mx-auto">
+                     <div class="masterClass_scroll_item_1_main_item">
+                        <div class="image">
+                           <img class="img-fluid img_res" src="asset/img/masterclass/1.png" alt="" />
+                           <div class="info">
+                              <h5>WORKSHOP CATEGORY</h5>
+                              <h3>WORKSHOP NAME</h3>
+                           </div>
+                           <div class="info_badge">
+                              <p>12+ Years</p>
+                           </div>
+                        </div>
+                        <div class="content">
+                           <div class="row">
+                              <div class="col-lg-4 col-md-4 col-sm-5 col-4">
+                                 <div class="content_left">
+                                    <p>LIVE ON</p>
+                                    <h5>23 Jun '20</h5>
+                                 </div>
+                              </div>
+                              <div class="col-lg-8 col-md-8 col-sm-7 col-8">
+                                 <div class="content_right">
+                                    <p>TIME SLOTS</p>
+                                    <h5>10.30 AM, 11.30 AM <span>&amp; MORE</span> <a href="#"><img src="asset/img/icons/arrow-right.png" alt="" /></a></h5>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+   </div>
+
+   <div id="masterClass_scroll_item_2" class="masterClass_scroll_item_1_class">
       <div class="container">
          <div class="row">
             <div class="col-lg-12">
@@ -699,9 +702,9 @@
             </div>
          </div>
       </div>
-   </section>
+   </div>
 
-   <section id="masterClass_scroll_item_3" class="masterClass_scroll_item_1_class">
+   <div id="masterClass_scroll_item_3" class="masterClass_scroll_item_1_class">
       <div class="container">
          <div class="row">
             <div class="col-lg-12">
@@ -805,9 +808,9 @@
             </div>
          </div>
       </div>
-   </section>
+   </div>
 
-   <section id="masterClass_scroll_item_4" class="masterClass_scroll_item_1_class">
+   <div id="masterClass_scroll_item_4" class="masterClass_scroll_item_1_class">
       <div class="container">
          <div class="row">
             <div class="col-lg-12">
@@ -911,9 +914,9 @@
             </div>
          </div>
       </div>
-   </section>
+   </div>
 
-   <section id="masterClass_scroll_item_5" class="masterClass_scroll_item_1_class">
+   <div id="masterClass_scroll_item_5" class="masterClass_scroll_item_1_class">
       <div class="container">
          <div class="row">
             <div class="col-lg-12">
@@ -1017,9 +1020,9 @@
             </div>
          </div>
       </div>
-   </section>
+   </div>
 
-   <section id="masterClass_scroll_item_6" class="masterClass_scroll_item_1_class">
+   <div id="masterClass_scroll_item_6" class="masterClass_scroll_item_1_class">
       <div class="container">
          <div class="row">
             <div class="col-lg-12">
@@ -1123,9 +1126,9 @@
             </div>
          </div>
       </div>
-   </section>
+   </div>
 
-   <section id="masterClass_scroll_item_7" class="masterClass_scroll_item_1_class">
+   <div id="masterClass_scroll_item_7" class="masterClass_scroll_item_1_class">
       <div class="container">
          <div class="row">
             <div class="col-lg-12">
@@ -1229,7 +1232,11 @@
             </div>
          </div>
       </div>
+   </div>
+
    </section>
+
+
 
 
 
